[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dapplepot-sdk"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
langchain = [
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
]
llama-index = [
    "llama-index-core>=0.10.0",
]
litellm = [
    "litellm>=1.40.0",
]
openai = [
    "openai>=1.30.0",
]
anthropic = [
    "anthropic>=0.28.0",
]
all = [
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
    "llama-index-core>=0.10.0",
    "litellm>=1.40.0",
    "openai>=1.30.0",
    "anthropic>=0.28.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dapplepot_sdk*"]
