[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dapplepot-sdk"
version = "0.1.0"
description = "DapplePot Python SDK for AI agent security observability — instruments LangChain/LangGraph, OpenAI, and Anthropic"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["llm", "security", "observability", "ai-agents", "langchain", "openai", "anthropic", "langgraph"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Intended Audience :: Developers",
]
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
langchain = [
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
]
openai = [
    "openai>=1.30.0",
]
anthropic = [
    "anthropic>=0.28.0",
]
all = [
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
    "openai>=1.30.0",
    "anthropic>=0.28.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dapplepot_sdk*"]

[project.urls]
Homepage = "https://dapplepot.com"
